# userbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 3d2daea070c9_base.py
infra/: .env.example  docker-compose.yaml
scr/: client.py  const.py  models.py  repo.py  sender.py
scr/core/: base.py  db.py  settings.py
